tests/invalid/tuple_subscript_assign/main.py
t: tuple[int, int] = (1, 2)
t[0] = 3
